--- a/Web Portofolio/index.html
+++ b/Web Portofolio/index.html
@@ -209,6 +209,6 @@
           </div>
         </div>
       </section>
-        <script src ="js/sricipts.js"></script>
+        <script src ="js/script.js"></script>
     </body>
 </html>
